--- a/styles.css
+++ b/styles.css
@@ -101,9 +101,8 @@ footer
 .glow
 {
   box-shadow:0px 0px 30px rgb(234, 238, 240);
-  /* -moz-transition: all 0.2s ease-in;
-  -o-transition: all 0.2s ease-in;
-  -webkit-transition: all 0.2s ease-in; */
-  transition: all 0.2s ease-in;
-  transition: all 0.2s ease-out;
+  -moz-transition: all 0.1s;
+  -o-transition: all 0.1s;
+  -webkit-transition: all 0.1s;
+  transition: all 0.1s;
 }
